k8s/01-arian-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arian
  namespace: arian
spec: {}
status: {}
