k8s/04-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/ -n arian
    kompose.version: 1.31.2 (a92241f79)
  labels:
    io.kompose.service: web-v1
  name: web-v1
  namespace: arian
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    io.kompose.service: web-v1
